--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask==1.1.2 
-Flask-Cors==3.0.8 
-Flask-RESTful==0.3.7 
-gunicorn==20.0.4 
-joblib==0.13.2 
-jsonschema==2.6.0 
-pandas==0.25.1 
+Flask==1.1.2
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.7
+gunicorn==20.0.4
+joblib==1.1.0
+jsonschema==4.4.0
+pandas==1.4.2
 pickleshare==0.7.5
-requests==2.23.0 
-requests-file==1.4.3 
-scikit-learn==0.22.2 
-scipy==1.4.1 
-wcwidth==0.1.7 
+requests==2.27.1
+requests-file==1.5.1
+scikit-learn==1.0.2
+scipy==1.7.3
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
+werkzeug==2.0.3
